--- a/index.html
+++ b/index.html
@@ -4,22 +4,112 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./static/images/favicon.png" type="image/png">
     <title>rayvol</title>
     <link rel="stylesheet" href="./static/css/main.css">
     <script defer src="./static/js/main.bundle.js"></script>
 </head>
 <body>
     <header class="header">
-        <div class="header__container container">
+        <nav class="header__container container">
             <a href="/" class="header-logo">
                 <img src="./static/images/logo.png" alt="" class="header-logo__img">
+                <span class="header-logo__text">Металлообработка</span>
             </a>
-            <div class="header__search">
-                <svg class="header__search-icon" viewBox="0 0 22 22">
-                    <use href='/static/images/sprite.svg#search'/>
-                </svg>
+            <ul class="header__menu">
+                <li class="menu-item">
+                    <a href="/" class="menu-link">Каталог</a>
+                </li>
+                <li class="menu-item has-children">
+                    <a href="/" class="menu-link">
+                        Услуги
+                        <svg viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <ul class="sub-menu">
+                        <div class="menu-item">
+                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+                        </div>
+                        <div class="menu-item">
+                            <a href="/" class="menu-link">Сварочные работы</a>
+                        </div>
+                    </ul>
+                </li>
+                <li class="menu-item has-children">
+                    <a href="/" class="menu-link">
+                        О компании
+                        <svg viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <ul class="sub-menu">
+                        <div class="menu-item">
+                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+                        </div>
+                        <div class="menu-item">
+                            <a href="/" class="menu-link">Сварочные работы</a>
+                        </div>
+                    </ul>
+                </li>
+                <li class="menu-item">
+                    <a href="/" class="menu-link">Контакты</a>
+                </li>
+            </ul>
+            <div class="header__tels">
+                <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
+                <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
+            </div>
+            <div class="header__btn btn btn--transparent">Заказать звонок</div>
+            <div class="header__actions">
+                <div class="header__action">
+                    <svg class="header__action-icon" viewBox="0 0 22 22">
+                        <use href='./static/images/sprite.svg#search'/>
+                    </svg>
+                </div>
+                <a href="/" class="header__cart header__action">
+                    <svg class="header__action-icon" viewBox="0 0 22 22">
+                        <use href='./static/images/sprite.svg#cart'/>
+                    </svg>
+                </a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="swiper horizontal-slider" id="horizontal-slider">
+            <div class="swiper-wrapper">
+                <div class="horizontal-slider__slide horizontal-slider__slide--fullscreen main-section swiper-slide">
+                    <div class="bg">
+                        <img src="./static/images/main-pic.png" alt="" class="bg__img">
+                    </div>
+                    <div class="container">
+                        <h1 class="main-section__title">Изготовление и покраска металлоизделий от простого до сложного</h1>
+                        <div class="btn btn--main btn--inline btn--pad29">Рассчитать стоимость проекта</div>
+                    </div>
+                </div>
+                <div class="horizontal-slider__slide horizontal-slider__slide--fullscreen swiper-slide">Slide 02</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 03</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 04</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 05</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 06</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 07</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 08</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 09</div>
+                <div class="horizontal-slider__slide swiper-slide">Slide 10</div>
             </div>
         </div>
-    </header>
+    </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <p class="footer__text">© ООО «Рейвол», 2022</p>
+            <a href="/" class="footer__policy footer__text footer__text--link">Политика конфиденциальности</a>
+            <a href="https://place-start.ru/" target="_blank" class="footer__ps footer__text">
+                Сделано в
+                <svg viewBox="0 0 83 17">
+                    <use href='./static/images/sprite.svg#ps-logo'/>
+                </svg>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
