--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,86 +1,4 @@
-<!-- start header.html-->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./static/images/favicon.png" type="image/png">
-    <title>rayvol</title>
-    <link rel="stylesheet" href="./static/css/main.css">
-    <script>
-        window.templateUrl = '.'
-    </script>
-    <script defer src="./static/js/main.bundle.js"></script>
-</head>
-<body>
-    <header class="header">
-        <nav class="header__container container">
-            <a href="/" class="header-logo">
-                <img src="./static/images/logo.png" alt="" class="header-logo__img">
-                <span class="header-logo__text">Металлообработка</span>
-            </a>
-            <ul class="header__menu">
-                <li class="menu-item">
-                    <a href="/" class="menu-link">Каталог</a>
-                </li>
-                <li class="menu-item has-children">
-                    <a href="/" class="menu-link">
-                        Услуги
-                        <svg viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <ul class="sub-menu">
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Сварочные работы</a>
-                        </div>
-                    </ul>
-                </li>
-                <li class="menu-item has-children">
-                    <a href="/" class="menu-link">
-                        О компании
-                        <svg viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <ul class="sub-menu">
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Сварочные работы</a>
-                        </div>
-                    </ul>
-                </li>
-                <li class="menu-item">
-                    <a href="/" class="menu-link">Контакты</a>
-                </li>
-            </ul>
-            <div class="header__tels">
-                <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
-                <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
-            </div>
-            <div class="header__btn btn btn--transparent">Заказать звонок</div>
-            <div class="header__actions">
-                <div class="header__action">
-                    <svg class="header__action-icon" viewBox="0 0 22 22">
-                        <use href='./static/images/sprite.svg#search'/>
-                    </svg>
-                </div>
-                <a href="/" class="header__cart header__action">
-                    <svg class="header__action-icon" viewBox="0 0 22 22">
-                        <use href='./static/images/sprite.svg#cart'/>
-                    </svg>
-                </a>
-            </div>
-        </nav>
-    </header>
-    <main>
-<!-- end header.html-->
+@include ./parts/header.html
 <div class="swiper horizontal-slider" id="horizontal-slider">
     <div class="swiper-wrapper">
         <section class="horizontal-slider__slide fullscreen-section swiper-slide main-section">
@@ -189,33 +107,11 @@
                         </a>
                     </div>
                     <div class="products-grid">
-<!-- start product-card.html-->
-<a href="/" class="product-card">
-    <span class="product-card__top">
-        <img src="./static/images/product1.jpg" alt="" class="product-card__img">
-    </span>
-</a>
-<!-- end product-card.html-->
+                        @include ./parts/product-card.html {"img" : "./static/images/product1.jpg"}
                     </div>
                 </div>
             </div>
         </section>
     </div>
 </div>
-<!-- start footer.html-->
-</main>
-<footer class="footer">
-    <div class="container footer__container">
-        <p class="footer__text">© ООО «Рейвол», 2022</p>
-        <a href="/" class="footer__policy footer__text footer__text--link">Политика конфиденциальности</a>
-        <a href="https://place-start.ru/" target="_blank" class="footer__ps footer__text">
-            Сделано в
-            <svg viewBox="0 0 83 17">
-                <use href='./static/images/sprite.svg#ps-logo'/>
-            </svg>
-        </a>
-    </div>
-</footer>
-</body>
-</html>
-<!-- end footer.html-->
+@include ./parts/footer.html
