Сделал преимущества, доделал фон в каталоге

--- a/index.html
+++ b/index.html
@@ -176,8 +176,15 @@
                 </form>
             </div>
         </section>
-        <section class="horizontal-slider__slide horizontal-slider__slide--auto swiper-slide">
-            <div class="fullscreen-section catalog-section dark-text h100">
+        <div class="horizontal-slider__slide horizontal-slider__slide-3 horizontal-slider__slide--auto swiper-slide">
+            <div class="dark-part"></div>
+            <div class="stain">
+                <svg class="stain__icon" viewBox="0 0 866 885">
+                    <use href='./static/images/sprite.svg#stain'/>
+                </svg>
+            </div>
+            <div class="white-part"></div>
+            <section class="fullscreen-section catalog-section dark-text h100">
                 <div class="container">
                     <div class="catalog-section__top">
                         <h2 class="section-title">Каталог</h2>
@@ -194,12 +201,151 @@
     <span class="product-card__top">
         <img src="./static/images/product1.jpg" alt="" class="product-card__img">
     </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Панно «Кони в горах»</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
+<!-- start product-card.html-->
+<a href="/" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product2.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Цветочница</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
+<!-- start product-card.html-->
+<a href="/" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product3.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Декоративные элементы для лестниц, заборов, перегородок и др.</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
+</a>
+<!-- end product-card.html-->
+<!-- start product-card.html-->
+<a href="/" class="product-card">
+    <span class="product-card__top">
+        <img src="./static/images/product4.jpg" alt="" class="product-card__img">
+    </span>
+    <span class="product-card__bottom">
+        <span class="product-card__name">Очаг для костра «Лес»</span>
+        <span class="product-card__size">1,5 х 600 х 400 мм</span>
+        <span class="product-card__price-row">
+            <span class="product-card__price">10 000 ₽</span>
+        </span>
+        <span class="btn btn--main">В корзину</span>
+    </span>
 </a>
 <!-- end product-card.html-->
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="h100 advantages-section">
+                <h2 class="advantages-section__title section-title">Наши преимущества</h2>
+                <div class="advantages-section__grid">
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Широкий ассортимент услуг</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное производство, нанотехнологии</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Быстрое и качественное исполнение</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Индивидуальный подход к клиенту</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Помощь в разработке чертежей</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное производство</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Гибкая система скидок</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное производство, нанотехнологии, которые представляют собой</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+<!-- start advantage.html-->
+<div class="advantage">
+    <div class="advantage__icon-col">
+        <svg class="advantage__icon" viewBox="0 0 34 24">
+            <use href='./static/images/sprite.svg#ok'/>
+        </svg>
+    </div>
+    <div class="advantage__text-col">
+        <p class="advantage__name">Отгрузка через транспортные компании</p>
+        <p class="advantage__text">Внезапно, стремящиеся вытеснить традиционное производство</p>
+    </div>
+</div>
+<!-- end advantage.html-->
+                </div>
+            </section>
+        </div>
+        <div class="horizontal-slider__slide horizontal-slider__slide--auto hand-section swiper-slide">
+            <img class="hand-section__img" src="./static/images/hand-img.jpg" alt="">
+        </div>
     </div>
 </div>
 <!-- start footer.html-->
