--- a/src/html/index.html
+++ b/src/html/index.html
@@ -94,8 +94,15 @@
                 </form>
             </div>
         </section>
-        <section class="horizontal-slider__slide horizontal-slider__slide--auto swiper-slide">
-            <div class="fullscreen-section catalog-section dark-text h100">
+        <div class="horizontal-slider__slide horizontal-slider__slide-3 horizontal-slider__slide--auto swiper-slide">
+            <div class="dark-part"></div>
+            <div class="stain">
+                <svg class="stain__icon" viewBox="0 0 866 885">
+                    <use href='./static/images/sprite.svg#stain'/>
+                </svg>
+            </div>
+            <div class="white-part"></div>
+            <section class="fullscreen-section catalog-section dark-text h100">
                 <div class="container">
                     <div class="catalog-section__top">
                         <h2 class="section-title">Каталог</h2>
@@ -107,11 +114,28 @@
                         </a>
                     </div>
                     <div class="products-grid">
-                        @include ./parts/product-card.html {"img" : "./static/images/product1.jpg"}
+                        @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                        @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                        @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                        @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="h100 advantages-section">
+                <h2 class="advantages-section__title section-title">Наши преимущества</h2>
+                <div class="advantages-section__grid">
+                    @include ./parts/advantage.html {"name" : "Широкий ассортимент услуг", "text" : "Внезапно, стремящиеся вытеснить традиционное производство, нанотехнологии"}
+                    @include ./parts/advantage.html {"name" : "Быстрое и качественное исполнение", "text" : "Внезапно, стремящиеся вытеснить традиционное"}
+                    @include ./parts/advantage.html {"name" : "Индивидуальный подход к клиенту", "text" : "Внезапно, стремящиеся вытеснить традиционное"}
+                    @include ./parts/advantage.html {"name" : "Помощь в разработке чертежей", "text" : "Внезапно, стремящиеся вытеснить традиционное производство"}
+                    @include ./parts/advantage.html {"name" : "Гибкая система скидок", "text" : "Внезапно, стремящиеся вытеснить традиционное производство, нанотехнологии, которые представляют собой"}
+                    @include ./parts/advantage.html {"name" : "Отгрузка через транспортные компании", "text" : "Внезапно, стремящиеся вытеснить традиционное производство"}
+                </div>
+            </section>
+        </div>
+        <div class="horizontal-slider__slide horizontal-slider__slide--auto hand-section swiper-slide">
+            <img class="hand-section__img" src="./static/images/hand-img.jpg" alt="">
+        </div>
     </div>
 </div>
 @include ./parts/footer.html
