--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 @include ./parts/header.html
 <div class="swiper horizontal-slider" id="horizontal-slider">
-    <div class="swiper-wrapper">
+    <div class="horizontal-slider__wrapper swiper-wrapper">
         <section class="horizontal-slider__slide fullscreen-section swiper-slide main-section">
             <div class="bg">
                 <img src="./static/images/main-pic.png" alt="" class="bg__img">
