--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -11,5 +11,8 @@
         </a>
     </div>
 </footer>
+<div class="mobile-menu" id="mobile-menu">
+    <div class="mobile-menu__wrap"></div>
+</div>
 </body>
 </html>
