--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -65,6 +65,12 @@
             </div>
             <div class="header__btn btn btn--transparent">Заказать звонок</div>
             <div class="header__actions">
+                <div class="header-burger default-burger burger" id="header-burger">
+                    <div class="default-burger__line burger__line"></div>
+                    <div class="default-burger__line burger__line burger__line--cross"></div>
+                    <div class="default-burger__line burger__line burger__line--cross"></div>
+                    <div class="default-burger__line burger__line"></div>
+                </div>
                 <div class="header__action">
                     <svg class="header__action-icon" viewBox="0 0 22 22">
                         <use href='./static/images/sprite.svg#search'/>
