--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -12,7 +12,13 @@
     </div>
 </footer>
 <div class="mobile-menu" id="mobile-menu">
-    <div class="mobile-menu__wrap"></div>
+    <div class="mobile-menu__wrap">
+        @include ./header-menu.html
+        <div class="mobile-menu__footer">
+            <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
+            <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
