--- a/parts/header.html
+++ b/parts/header.html
@@ -19,46 +19,48 @@
                 <img src="./static/images/logo.png" alt="" class="header-logo__img">
                 <span class="header-logo__text">Металлообработка</span>
             </a>
-            <ul class="header__menu">
-                <li class="menu-item">
-                    <a href="/" class="menu-link">Каталог</a>
-                </li>
-                <li class="menu-item has-children">
-                    <a href="/" class="menu-link">
-                        Услуги
-                        <svg viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <ul class="sub-menu">
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Сварочные работы</a>
-                        </div>
-                    </ul>
-                </li>
-                <li class="menu-item has-children">
-                    <a href="/" class="menu-link">
-                        О компании
-                        <svg viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <ul class="sub-menu">
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
-                        </div>
-                        <div class="menu-item">
-                            <a href="/" class="menu-link">Сварочные работы</a>
-                        </div>
-                    </ul>
-                </li>
-                <li class="menu-item">
-                    <a href="/" class="menu-link">Контакты</a>
-                </li>
-            </ul>
+<!-- start header-menu.html-->
+<ul class="header__menu">
+    <li class="menu-item">
+        <a href="/" class="menu-link">Каталог</a>
+    </li>
+    <li class="menu-item has-children">
+        <a href="/" class="menu-link">
+            Услуги
+            <svg viewBox="0 0 9 5">
+                <use href='./static/images/sprite.svg#arr'/>
+            </svg>
+        </a>
+        <ul class="sub-menu">
+            <div class="menu-item">
+                <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+            </div>
+            <div class="menu-item">
+                <a href="/" class="menu-link">Сварочные работы</a>
+            </div>
+        </ul>
+    </li>
+    <li class="menu-item has-children">
+        <a href="/" class="menu-link">
+            О компании
+            <svg viewBox="0 0 9 5">
+                <use href='./static/images/sprite.svg#arr'/>
+            </svg>
+        </a>
+        <ul class="sub-menu">
+            <div class="menu-item">
+                <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+            </div>
+            <div class="menu-item">
+                <a href="/" class="menu-link">Сварочные работы</a>
+            </div>
+        </ul>
+    </li>
+    <li class="menu-item">
+        <a href="/" class="menu-link">Контакты</a>
+    </li>
+</ul>
+<!-- end header-menu.html-->
             <div class="header__tels">
                 <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
                 <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
