Сделал блок сео-текста, исправил баг с изображением в схеме работы растягивающим высоту слайдера больше высоты экрана

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -221,6 +221,29 @@
                 </div>
             </section>
         </div>
+        <section class="horizontal-slider__slide fullscreen-section seo-section swiper-slide">
+            <img src="./static/images/seo-img.jpg" alt="" class="seo-section__img">
+            <div class="container">
+                <div class="seo-section__grid">
+                    <h2 class="seo-section__title section-title">Заголовок СЕО-текста небольшой максимум в 3 строчки</h2>
+                    <div class="seo-section__scroller swiper" id="seo-scroller">
+                        <div class="swiper-wrapper">
+                            <div class="seo-section__slide swiper-slide">
+                                <div class="seo-section__text content-text">
+                                    <p>Динамично развивающаяся компания, раскройка разных видов металла, лазерная резка. Мы предоставляем различные услуги сварки. </p>
+                                    <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне. </p>
+                                    <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне. </p>
+                                    <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне. </p>
+                                    <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне. </p>
+                                    <p>Наши специалисты обслуживают иностранные и отечественные транспортные средства. Мы предоставляем услуги сертифицированного ремонта. У нас вы можете отремонтировать автомобиль бизнес и эконом класса любой марки на одинаково высоком уровне. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-scrollbar scrollbar"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
 @include ./parts/footer.html
