--- a/index.html
+++ b/index.html
@@ -462,6 +462,57 @@
                 </div>
             </div>
         </section>
+        <section class="horizontal-slider__slide horizontal-slider__slide--auto swiper-slide contacts-section">
+            <div class="contacts-section__bg bg">
+                <img src="./static/images/wavy-bg.jpg" alt="" class="contacts-section__bg-img bg__img">
+            </div>
+            <div class="contacts-section__form calc-form">
+                <p class="section-title calc-form__title">Рассчитать стоимость проекта</p>
+                <p class="calc-form__text">Оставьте заявку на сайте, наши менеджеры свяжутся с вами, ответят на возникшие вопросы и помогут рассчитать стоимость изготовления необходимого оборудования</p>
+                <form class="calc-form__form" data-feedback-form>
+                    <div class="form-elem">
+                        <input type="text" class="form-text-input" placeholder="Имя">
+                        <p class="form-input-placeholder">Имя</p>
+                    </div>
+                    <div class="form-elem">
+                        <input type="email" class="form-text-input" placeholder="Email">
+                        <p class="form-input-placeholder">Email</p>
+                    </div>
+                    <div class="form-elem">
+                        <input type="text" class="form-text-input" placeholder="Компания">
+                        <p class="form-input-placeholder">Компания</p>
+                    </div>
+                    <div class="form-elem">
+                        <input type="tel" class="form-text-input" placeholder="Телефон">
+                        <p class="form-input-placeholder">Телефон</p>
+                    </div>
+                    <div class="calc-form__submit-row">
+                        <button data-submit-btn type="submit" class="calc-form__submit btn btn--main btn--pad60">
+                            Отправить заявку
+                        </button>
+                        <p class="personal calc-form__personal">
+                            Нажимая кнопку, вы соглашаетесь <a href="/" class="personal__link">на&nbsp;обработку персональных данных</a>
+                        </p>
+                    </div>
+                </form>
+            </div>
+            <div class="contacts-section__contacts-col">
+                <h2 class="section-title contacts-section__title">Контакты</h2>
+                <p class="contacts__name">ООО «Рейвол»</p>
+                <p class="contacts__address">160028, Вологодская область, г. Вологда, Окружное ш, д. 13в, офис 335, Территория базы «Антей»</p>
+                <div class="contacts-info">
+                    <p>ИНН: 3525475761</p>
+                    <p>ОГРН: 1213500018280</p>
+                </div>
+                <div class="contacts-section__links">
+                    <div class="contacts__group">
+                        <a href="tel: +7 (8172) 581-321" class="contacts-link">+7 (8172) 581-321</a>
+                        <a href="tel: +7 (8172) 581-321" class="contacts-link">+7 (8172) 581-321</a>
+                    </div>
+                    <a href="mailto: Rayvol@bk.ru" class="contacts-link">Rayvol@bk.ru</a>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
 <!-- start footer.html-->
