--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,48 +17,7 @@
             <div class="container">
                 <h2 class="services-section__title section-title">Услуги</h2>
                 <div class="services-section__grid">
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service1.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Лазерная резка ЧПУ</span>
-                        <img src="./static/images/service1.svg" alt="" class="service-block__bg">
-                    </a>
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service2.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Сварочные работы</span>
-                        <img src="./static/images/service2.svg" alt="" class="service-block__bg">
-                    </a>
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service3.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Лазерная сварка</span>
-                        <img src="./static/images/service3.svg" alt="" class="service-block__bg">
-                    </a>
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service4.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Гибка листового металла ЧПУ</span>
-                        <img src="./static/images/service4.svg" alt="" class="service-block__bg">
-                    </a>
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service5.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Токарно-фрезерные работы</span>
-                        <img src="./static/images/service5.svg" alt="" class="service-block__bg">
-                    </a>
-                    <a href="/" class="service-block">
-                        <span class="service-block__top">
-                            <img src="./static/images/service6.svg" alt="" class="service-block__icon">
-                        </span>
-                        <span class="service-block__title">Линия порошковой покраски</span>
-                        <img src="./static/images/service6.svg" alt="" class="service-block__bg">
-                    </a>
+                    @include ./parts/services.html
                 </div>
             </div>
         </section>
@@ -246,7 +205,7 @@
         </section>
         <section class="horizontal-slider__slide horizontal-slider__slide--auto swiper-slide contacts-section">
             <div class="contacts-section__bg bg">
-                <img src="./static/images/wavy-bg.jpg" alt="" class="contacts-section__bg-img bg__img">
+                <img src="./static/images/wavy-bg.png" alt="" class="contacts-section__bg-img bg__img">
             </div>
             <div class="contacts-section__form calc-form">
                 <p class="section-title calc-form__title">Рассчитать стоимость проекта</p>
