--- a/parts/header.html
+++ b/parts/header.html
@@ -22,10 +22,10 @@
 <!-- start header-menu.html-->
 <ul class="header__menu">
     <li class="menu-item">
-        <a href="/" class="menu-link">Каталог</a>
+        <a href="/catalog.html" class="menu-link">Каталог</a>
     </li>
     <li class="menu-item has-children">
-        <a href="/" class="menu-link">
+        <a href="/services.html" class="menu-link">
             Услуги
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -57,7 +57,7 @@
         </ul>
     </li>
     <li class="menu-item">
-        <a href="/" class="menu-link">Контакты</a>
+        <a href="/contacts.html" class="menu-link">Контакты</a>
     </li>
 </ul>
 <!-- end header-menu.html-->
