--- a/src/html/parts/header-menu.html
+++ b/src/html/parts/header-menu.html
@@ -1,9 +1,9 @@
 <ul class="header__menu">
     <li class="menu-item">
-        <a href="/" class="menu-link">Каталог</a>
+        <a href="/catalog.html" class="menu-link">Каталог</a>
     </li>
     <li class="menu-item has-children">
-        <a href="/" class="menu-link">
+        <a href="/services.html" class="menu-link">
             Услуги
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -35,6 +35,6 @@
         </ul>
     </li>
     <li class="menu-item">
-        <a href="/" class="menu-link">Контакты</a>
+        <a href="/contacts.html" class="menu-link">Контакты</a>
     </li>
 </ul>
